--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
           </li>
         </ul>
       </section>
-      <adress class="footer-contacts">
+      <address class="footer-contacts">
         <a class="footer-contacts-phone" href="tel.+78128121212">+7 (812) 812-12-12</a>
-      </adress>
+      </address>
       <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
     </footer>
   </body>
