--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="welcome-section-divider"></div>
         </div>
         <div class="welcome-text">
-          <p class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <h2 class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p class="subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         </div>
       </section>
@@ -61,8 +61,6 @@
             <h3 class="white-colored">Настоящий городок</h3>
             <p class="white-colored">— №1 —</p>
             <p class="white-colored">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          </li>
-          <li class="advantage-item">
             <img src="" alt="Изображение города Седона">
           </li>
           <li class="advantage-item">
@@ -81,12 +79,10 @@
             <p>Не только китайского, но и настоящего местного производства!</p>
           </li>
           <li class="advantage-item">
-            <img src="" alt="Мост дьявола">
-          </li>
-          <li class="advantage-item">
             <h3 class="white-colored">Там есть мост дьявола</h3>
             <p class="white-colored">— №2 —</p>
             <p class="white-colored">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img src="" alt="Мост дьявола">
           </li>
           <li class="advantage-item">
             <h3>Небольшая площадь</h3>
@@ -115,7 +111,7 @@
         <h2 class="visually-hidden">Подписка на рассылку</h2>
         <p class="title">Подпишитесь на рассылку</p>
         <p class="subtitle">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form action="https://echo.htmlacademy.ru/" method="post">
+        <form action="https://echo.htmlacademy.ru/" name="user-contacts" method="post">
           <input type="email" name="email" placeholder="Ваш e-mail">
           <input type="submit" value="Подписаться">
         </form>
