--- a/2/hotels.html
+++ b/2/hotels.html
@@ -45,7 +45,6 @@
     </header>
     <main class="main-inner">
       <section class="filter-section">
-        <header class="filter-section-header">
           <h1 class="filter-section-title">Гостиницы Седоны</h1>
           <ul class="breadcrumbs">
             <li class="breadcrumbs-item">
@@ -57,9 +56,8 @@
               <a class="breadcrumbs-link">Гостиницы</a>
             </li>
           </ul>
-        </header>
         <h2 class="visually-hidden">Поиск по гостиницам Седоны</h2>
-        <form class="search-filter" action="https://echo.htmlacademy.ru/" method="get">
+        <form class="search-filter" action="https://echo.htmlacademy.ru/" name="search-filter" method="get">
           <fieldset class="seacrh-filter-group">
             <legend class="search-filter-title">Инфраструктура</legend>
             <ul class="seacrh-filter-list">
@@ -117,8 +115,8 @@
       </section>
       <section class="result-section">
         <h2 class="visually-hidden">Результаты поиска</h2>
-        <header class="result-section-header">
-          <p class="result-section-title">Найдено гостиниц: 38</p>
+        <section class="result-section-headline">
+          <h2 class="title">Найдено гостиниц: 38</h2>
           <select class="select-control" aria-label="Сортировка">
             <option value="cheap">Сначала дешёвые</option>
             <option value="popular">Сначала популярные</option>
@@ -133,7 +131,7 @@
           <a href="#" class="button button-light">
             <span class="visually-hidden">Показать список</span>
           </a>
-        </header>
+        </section>
         <ul class="product-list">
             <li class="product-card">
               <img class="product-image" src="" alt="Amara Resort & Spa">
