Вносит правки в имена файлов
Также добавила точки в конце альтернативных подписей к изображениям. Добавила пропущенную контентную картинку (надпись "Welcome to the gorgeus Sedona.." на главной)

--- a/hotels.html
+++ b/hotels.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href=#>
-          <img class="page-header-logo" src="images/logo_header.svg" width="139" height="70" alt='Логотип сайта "Седона"'>
+          <img class="page-header-logo" src="images/logo-header.svg" width="139" height="70" alt='Логотип сайта "Седона".'>
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -237,7 +237,7 @@
         <address class="footer-contacts">
           <a class="footer-contacts-phone" href="tel.+78128121212">+7 (812) 812-12-12</a>
         </address>
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/"><img src="images/logo_htmlacademy.svg" width="115" height="34" alt="Сделано в Html-академии"></a>
+        <a class="htmlacademy-link" href="https://htmlacademy.ru/"><img src="images/logo-htmlacademy.svg" width="115" height="34" alt="Сделано в Html-академии."></a>
     </footer>
   </body>
 </html>
