--- a/hotels.html
+++ b/hotels.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header">
@@ -114,8 +115,8 @@
       </section>
       <section class="result-section">
         <h2 class="visually-hidden">Результаты поиска</h2>
-        <section class="result-section-headline">
-          <h2 class="title">Найдено гостиниц: 38</h2>
+        <div class="sorting-container">
+          <h2 class="title find-hotels-result">Найдено гостиниц: 38</h2>
           <select class="select-control" aria-label="Сортировка">
             <option value="cheap">Сначала дешёвые</option>
             <option value="popular">Сначала популярные</option>
@@ -130,67 +131,67 @@
           <a href="#" class="button button-light">
             <span class="visually-hidden">Показать список</span>
           </a>
-        </section>
+        </div>
         <ul class="product-list">
             <li class="product-card">
               <img class="product-image" src="images/catalog/hotel-1.jpg" width="299" height="206" alt="Amara Resort & Spa">
               <h3 class="product-name">Amara Resort & Spa</h3> 
-              <p class="product-despription">Гостиница</p>
+              <p class="product-description">Гостиница</p>
               <p class="product-price">От 4000 ₽</p>
               <a class="button button-brown" href=#>Подробнее</a>
-              <button class="button button-light-blue" type="button">В избранное</button>
+              <button class="button 0button-light-blue" type="button">В избранное</button>
               <div class="rating-stars"></div>
-              <p class="button button-light-gray">Рейтинг: 8,5</p>
+              <p class="button button-rating">Рейтинг: 8,5</p>
             </li>
             <li class="product-card">
                 <img class="product-image" src="images/catalog/hotel-2.jpg" width="299" height="206" alt="Desert Quail Inn">
                 <h3 class="product-name">Desert Quail Inn</h3> 
-                <p class="product-despription">Гостиница</p>
+                <p class="product-description">Гостиница</p>
                 <p class="product-price">От 3000 ₽</p>
                 <a class="button button-brown" href=#>Подробнее</a>
                 <button class="button button-light-blue" type="button">В избранное</button>
                 <div class="rating-stars"></div>
-                <p class="button button-light-gray">Рейтинг: 8,9</p>
+                <p class="button button-rating">Рейтинг: 8,9</p>
               </li>
               <li class="product-card">
                 <img class="product-image" src="images/catalog/hotel-3.jpg" width="299" height="206" alt="Villas at Poco Diablo">
                 <h3 class="product-name">Villas at Poco Diablo</h3> 
-                <p class="product-despription">Гостиница</p>
+                <p class="product-description">Гостиница</p>
                 <p class="product-price">От 2000 ₽</p>
                 <a class="button button-brown" href=#>Подробнее</a>
                 <button class="button added-in-favourites" type="button">В избранное</button>
                 <div class="rating-stars"></div>
-                <p class="button button-light-gray">Рейтинг: 9,2</p>
+                <p class="button button-rating">Рейтинг: 9,2</p>
               </li>
               <li class="product-card">
                 <img class="product-image" src="images/catalog/hotel-4.jpg" width="299" height="206" alt="GreenTree Inn">
                 <h3 class="product-name">GreenTree Inn</h3> 
-                <p class="product-despription">Гостиница</p>
+                <p class="product-description">Гостиница</p>
                 <p class="product-price">От 3000 ₽</p>
                 <a class="button button-brown" href=#>Подробнее</a>
                 <button class="button button-light-blue" type="button">В избранное</button>
                 <div class="rating-stars"></div>
-                <p class="button button-light-gray">Рейтинг: 9,2</p>
+                <p class="button button-rating">Рейтинг: 9,2</p>
               </li>
         </ul>
         <button class="button show-more" type="button">Загрузить еще</button>
         <ul class="pagination">
-          <li class="pagination-item pagination-current">
-              <a class="pagination-link" href=#>1</a>
+          <li class="pagination-item">
+              <a class="pagination-link pagination-current" href=#>1</a>
           </li>
-          <li class="pagination-item pagination-current">
+          <li class="pagination-item">
             <a class="pagination-link" href=#>2</a>
           </li>
-          <li class="pagination-item pagination-current">
+          <li class="pagination-item">
               <a class="pagination-link" href=#>3</a>
           </li>
-          <li class="pagination-item pagination-current">
+          <li class="pagination-item">
             <a class="pagination-link" href=#>4</a>
           </li>
-          <li class="pagination-item pagination-current">
+          <li class="pagination-item">
             <a class="pagination-link" href=#>...</a>
           </li>
-          <li class="pagination-item pagination-current">
+          <li class="pagination-item">
             <a class="pagination-link" href=#>10</a>
           </li>
         </ul>
@@ -207,9 +208,9 @@
         <h2 class="visually-hidden">Подписка на рассылку</h2>
         <p class="title">Подпишитесь на рассылку</p>
         <p class="subtitle">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form action="https://echo.htmlacademy.ru/" method="post">
-          <input type="email" name="email" placeholder="Ваш e-mail">
-          <input type="submit" value="Подписаться">
+        <form class="subscription" action="https://echo.htmlacademy.ru/" method="post">
+          <input class="subscription-field" type="email" name="email" placeholder="Ваш e-mail">
+          <button class="subscription-button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
@@ -218,17 +219,17 @@
         <section class="social-footer">
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a class="footer-social-item-icon" href=#>
+              <a class="button" href=#>
                 <span class="visually-hidden">Twitter</span>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-item-icon" href=#>
+              <a class="button" href=#>
                 <span class="visually-hidden">Facebook</span>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-item-icon" href=#>
+              <a class="button" href=#>
                 <span class="visually-hidden">Youtube</span>
               </a>
             </li>
