Вносит правки по базовой стилизации

--- a/hotels.html
+++ b/hotels.html
@@ -122,13 +122,13 @@
             <option value="popular">Сначала популярные</option>
             <option value="expensive">Сначала дорогие</option>
           </select>
-          <a href="#" class="button button-light button-light-cheked">
+          <a href="#" class="sorting-button sorting-button-active">
             <span class="visually-hidden">Показать карточки</span>
           </a>
-          <a href="#" class="button button-light">
+          <a href="#" class="sorting-button">
             <span class="visually-hidden">Показать на весь экран</span>
           </a>
-          <a href="#" class="button button-light">
+          <a href="#" class="sorting-button">
             <span class="visually-hidden">Показать список</span>
           </a>
         </div>
