--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a class="navigation-link" href=#>О седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href=#>Гостиницы</a>
+            <a class="navigation-link" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
