верстает микросетки на флексах (все страницы)

--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a class="navigation-link" href=#>
-            <span class="visually-hiden">
+            <span class="visually-hidden">
               Поиск
             </span>
           </a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href=#>
-            <span class="visually-hiden">
+            <span class="visually-hidden">
               Избранное
             </span>
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link button button-brown" href=#>Хочу сюда!</a>
+          <a class="button button-brown want-here-button" href=#>Хочу сюда!</a>
         </li>
       </ul>
     </nav>
@@ -114,7 +114,7 @@
         <div class="search-container">
           <h2 class="visually-hidden">Поиск гостиницы</h2>
           <p class="title">Заинтересовались?</p>
-          <p class="subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
+          <p class="subtitle">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
           <a class="button button-brown" href=#>Поиск гостиницы в Седоне</a>
         </div>
@@ -123,7 +123,7 @@
         <div class="newsletter-container">
           <h2 class="visually-hidden">Подписка на рассылку</h2>
           <p class="title white-colored">Подпишитесь на рассылку</p>
-          <p class="subtitle white-colored">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p class="subtitle white-colored">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
           <form class="subscription" action="https://echo.htmlacademy.ru/" name="user-contacts" method="post">
             <input class="subscription-field" type="email" name="email" placeholder="Ваш e-mail">
             <button class="subscription-button" type="submit">Подписаться</button>
