--- a/hotels.html
+++ b/hotels.html
@@ -28,20 +28,20 @@
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a class="navigation-link" href=#>
-            <span class="visually-hiden">
+            <span class="visually-hidden">
               Поиск
             </span>
           </a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href=#>
-            <span class="visually-hiden">
+            <span class="visually-hidden">
               Избранное
             </span>
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link button button-brown" href=#>Хочу сюда!</a>
+          <a class="button button-brown want-here-button" href=#>Хочу сюда!</a>
         </li>
       </ul>
     </nav>
@@ -65,9 +65,9 @@
 
           <form class="search-filter" action="https://echo.htmlacademy.ru/" name="search-filter" method="get">
 
-            <fieldset class="seacrh-filter-group">
+            <fieldset class="search-filter-group search-filter-infrastructure">
               <legend class="search-filter-title">Инфраструктура</legend>
-              <ul class="seacrh-filter-list">
+              <ul class="search-filter-list">
                 <li class="search-filter-item">
                   <label class="control">
                     <input class="control-input" type="checkbox" name="pool" checked>
@@ -88,24 +88,24 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="seacrh-filter-group">
+            <fieldset class="search-filter-group search-filter-property-type">
               <legend class="search-filter-title">Тип жилья</legend>
-              <ul class="seacrh-filter-list">
+              <ul class="search-filter-list">
                 <li class="search-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="property-type" value="hotel" checked>
+                    <input class="control-input" type="radio" name="property-type-name" value="hotel" checked>
                     Гостиница
                   </label>
                 </li>
                 <li class="search-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="property-type" value="motel">
+                    <input class="control-input" type="radio" name="property-type-name" value="motel">
                     Мотель
                   </label>
                 </li>
                 <li class="search-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="property-type" value="apartments">
+                    <input class="control-input" type="radio" name="property-type-name" value="apartments">
                     Апартаменты
                   </label>
                 </li>
@@ -113,14 +113,15 @@
             </fieldset>
 
 
-            <fieldset class="seacrh-filter-group">
+            <fieldset class="search-filter-group search-filter-price">
               <legend class="search-filter-title">Стоимость, ₽:</legend>
-              <input class="seacrh-filter-price-input" type="text" name="price-from" placeholder="от" value="0">
-              <input class="seacrh-filter-price-input" type="text" name="price-to" placeholder="до" value="9000">
+              <input class="search-filter-price-input" type="text" name="price-from" placeholder="от" value="0">
+              <input class="search-filter-price-input" type="text" name="price-to" placeholder="до" value="9000">
             </fieldset>
-            <button class="button button-light-blue" type="submit">Применить</button>
-            <button class="button button-transparent" type="reset">Сбросить</button>
-
+            <div class="search-filter-buttons">
+              <button class="button button-light-blue button-apply" type="submit">Применить</button>
+              <button class="button button-reset" type="reset">Сбросить</button>
+          </div>
           </form>
         </div>
       </section>
@@ -230,7 +231,7 @@
         <div class="newsletter-container">
           <h2 class="visually-hidden">Подписка на рассылку</h2>
           <p class="title">Подпишитесь на рассылку</p>
-          <p class="subtitle">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p class="subtitle">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
           <form class="subscription" action="https://echo.htmlacademy.ru/" method="post">
             <input class="subscription-field" type="email" name="email" placeholder="Ваш e-mail">
             <button class="subscription-button" type="submit">Подписаться</button>
