Верстает сетки на гридах
Также вносит мелкие правки на всех страницах

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a class="navigation-link" href=#>Главная</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href=#>О седоне</a>
+          <a class="navigation-link" href=#>О Cедоне</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="hotels.html">Гостиницы</a>
@@ -57,56 +57,70 @@
         </div>
         <div class="welcome-text">
           <h2 class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-          <p class="subtitle welcome-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+          <p class="subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         </div>
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
-          <li class="advantage-item photo-contained">
+          <li class="advantage-item photo-contain">
             <div class="description-container">
-              <h3 class="white-colored">Настоящий городок</h3>
+              <h3 class="white-colored">Настоящий<br>городок</h3>
               <p class="white-colored">— №1 —</p>
-              <p class="white-colored">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <p class="white-colored">Седона — не аттракцион<br>для туристов, там течёт<br>своя жизнь</p>
             </div>
             <img class="index-description-photo" src="images/photo-1.jpg" width="800" height="384"
               alt="Изображение города Седона.">
           </li>
           <li class="advantage-item">
-            <h3>Жильё</h3>
-            <div class="icon"></div>
-            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <div class="description-container description-with-icon">
+              <h3>Жильё</h3>
+              <div class="advantage-item-icon advantage-item-icon-property"></div>
+              <p>Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
+            </div>
           </li>
           <li class="advantage-item white-background">
-            <h3>Еда</h3>
-            <div class="icon"></div>
-            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <div class="description-container description-with-icon">
+              <h3>Еда</h3>
+              <div class="advantage-item-icon advantage-item-icon-property"></div>
+              <p>Всегда заказывайте<br>топовый фирменный бургер,<br>вы не разочаруетесь!</p>
+            </div>
           </li>
           <li class="advantage-item">
-            <h3>Сувениры</h3>
-            <div class="icon"></div>
-            <p>Не только китайского, но и настоящего местного производства!</p>
+            <div class="description-container description-with-icon">
+              <h3>Сувениры</h3>
+              <div class="advantage-item-icon advantage-item-icon-property"></div>
+              <p>Не только китайского,<br>но и настоящего местного<br>производства!</p>
+            </div>
           </li>
-          <li class="advantage-item photo-contained">
-            <h3 class="white-colored">Там есть мост дьявола</h3>
-            <p class="white-colored">— №2 —</p>
-            <p class="white-colored">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <li class="advantage-item photo-contain">
             <img class="index-description-photo" src="images/photo-2.jpg" width="800" height="384" alt="Мост дьявола.">
+            <div class="description-container">
+              <h3 class="white-colored">Там есть<br>мост дьявола</h3>
+              <p class="white-colored">— №2 —</p>
+              <p class="white-colored">Да, по нему можно пройти!<br>Если вы осмелитесь,<br>разумеется</p>
+            </div>
           </li>
           <li class="advantage-item">
-            <h3>Небольшая площадь</h3>
-            <p>— №3 —</p>
-            <p>Все достопримечательности находятся очень близко</p>
+            <div class="description-container">
+              <h3>Небольшая<br>площадь</h3>
+              <p>— №3 —</p>
+              <p>Все достопримечательности<br>находятся очень близко</p>
+            </div>
           </li>
           <li class="advantage-item cold-light-blue-background">
-            <h3>Красивая дорога</h3>
-            <p>— №4 —</p>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <div class="description-container">
+              <h3>Красивая<br>дорога</h3>
+              <p>— №4 —</p>
+              <p>Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</p>
+            </div>
           </li>
           <li class="advantage-item">
-            <h3>Мало туристов</h3>
-            <p>— №5 —</p>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
+            <div class="description-container">
+              <h3>Мало<br>туристов</h3>
+              <p>— №5 —</p>
+              <p>Большинство едет в Гранд<br>Каньон и толпится там</p>
+            </div>
           </li>
         </ul>
       </section>
