--- a/hotels.html
+++ b/hotels.html
@@ -19,7 +19,7 @@
           <a class="navigation-link" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href=#>О седоне</a>
+          <a class="navigation-link" href=#>О Седоне</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link navigation-link-current" href=#>Гостиницы</a>
@@ -149,7 +149,7 @@
           </div>
           <ul class="product-list">
             <li class="product-card">
-              <img class="product-image" src="images/catalog/hotel-1.jpg" width="299" height="206"
+              <img class="product-image" src="images/catalog/hotel-1.jpg" width="300" height="206"
                 alt="Amara Resort & Spa">
               <h3 class="product-name">Amara Resort & Spa</h3>
               <p class="product-description">Гостиница</p>
@@ -160,7 +160,7 @@
               <p class="button button-rating">Рейтинг: 8,5</p>
             </li>
             <li class="product-card">
-              <img class="product-image" src="images/catalog/hotel-2.jpg" width="299" height="206"
+              <img class="product-image" src="images/catalog/hotel-2.jpg" width="300" height="206"
                 alt="Desert Quail Inn">
               <h3 class="product-name">Desert Quail Inn</h3>
               <p class="product-description">Гостиница</p>
@@ -171,18 +171,18 @@
               <p class="button button-rating">Рейтинг: 8,9</p>
             </li>
             <li class="product-card">
-              <img class="product-image" src="images/catalog/hotel-3.jpg" width="299" height="206"
+              <img class="product-image" src="images/catalog/hotel-3.jpg" width="300" height="206"
                 alt="Villas at Poco Diablo">
               <h3 class="product-name">Villas at Poco Diablo</h3>
               <p class="product-description">Гостиница</p>
               <p class="product-price">От 2000 ₽</p>
               <a class="button button-brown button-product-detail" href=#>Подробнее</a>
-              <button class="button added-in-favourites button-favorite" type="button">В избранное</button>
+              <button class="button button-favorite button-added-in-favorites" type="button">В избранном</button>
               <div class="rating-stars"></div>
               <p class="button button-rating">Рейтинг: 9,2</p>
             </li>
             <li class="product-card">
-              <img class="product-image" src="images/catalog/hotel-4.jpg" width="299" height="206" alt="GreenTree Inn">
+              <img class="product-image" src="images/catalog/hotel-4.jpg" width="300" height="206" alt="GreenTree Inn">
               <h3 class="product-name">GreenTree Inn</h3>
               <p class="product-description">Гостиница</p>
               <p class="product-price">От 3000 ₽</p>
@@ -227,7 +227,7 @@
           </div>
         </div>
       </section>
-      <section class="newsletter no-background">
+      <section class="newsletter newsletter-transparent-background">
         <div class="newsletter-container">
           <h2 class="visually-hidden">Подписка на рассылку</h2>
           <p class="title">Подпишитесь на рассылку</p>
