--- a/hotels.html
+++ b/hotels.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
 </head>
 
 <body>
@@ -123,13 +124,13 @@
 
             <fieldset class="search-filter-group search-filter-price">
               <legend class="search-filter-title search-filter-title-cost">Стоимость, ₽:</legend>
-                
+
               <div class="range-wrapper-inputs">
                 <label class="catalog-filter-label">
-                  <span class="range-min-title">от</span> 
+                  <span class="range-min-title">от</span>
                   <input class="range-input range-input-min-price" type="number" name="min-price" value="0">
                 </label>
-                
+
                 <label class="catalog-filter-label">
                   <span class="range-max-title">до</span>
                   <input class="range-input range-input-max-price" type="number" name="max-price" value="9000">
@@ -145,7 +146,7 @@
                       <span class="visually-hidden">Изменить максимальную цену.</span>
                     </button>
                   </div>
-                </div>  
+                </div>
               </div>
             </fieldset>
             <div class="search-filter-buttons">
