--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <div class="modal modal-search">
       <button class="modal-close-button" type="button">
         <span class="visually-hidden">Закрыть</span>
-        <svg width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
+        <svg aria-hidden="true" focusable="false" width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
           <path d="M13 1.2L11.8 0L6.5 5.3L1.2 0L0 1.2L5.3 6.5L0 11.8L1.2 13L6.5 7.7L11.8 13L13 11.8L7.7 6.5L13 1.2Z"/>
           </svg>
       </button>
@@ -244,7 +244,7 @@
             <span class="modal-children-amount">Дети:</span>
             <span class="tooltip">
               <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label">
-                <svg class="tooltip-icon" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="tooltip-icon" aria-hidden="true" focusable="false" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="12.5" cy="12.5" r="12.5"/>
                   <g clip-path="url(#clip0_34246_201)">
                   <path d="M12 17H13V11H12V17Z" fill="white"/>
