--- a/hotels.html
+++ b/hotels.html
@@ -279,29 +279,29 @@
   <footer class="page-footer">
     <h2 class="visually-hidden">Контакты</h2>
     <div class="page-footer-container">
-      <section class="social-footer">
-        <ul class="footer-social-list">
-          <li class="footer-social-item">
-            <a class="footer-social-link" href="https://twitter.com/htmlacademy_ru">
-              <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="18" height="15" viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg">
+      <section class="footer-network-contacts">
+        <ul class="footer-network-list">
+          <li class="footer-network-item">
+            <a class="footer-network-link" href="https://twitter.com/htmlacademy_ru">
+              <svg class="footer-network-icon" aria-hidden="true" focusable="false" width="18" height="15" viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg">
                 <path d="M11.6 0.194197C13.4 -0.305803 14.8 0.494197 15.4 1.3942C16.1 1.1942 16.8 0.894197 17.5 0.694197C17.5 1.5942 16.9 2.1942 16.6 2.4942C17.3 2.5942 18 1.8942 18 1.8942C17.8 2.8942 16.9 3.6942 16.3 3.8942C16.1 10.6942 13 15.0942 5.7 14.9942C5.1 14.9942 5.8 14.9942 5.2 14.9942C4.8 14.9942 0.8 14.4942 0 13.0942C2.4 13.2942 4.1 12.6942 5 11.8942C4 11.5942 2.1 11.4942 1.8 8.9942C2.2 9.0942 2.4 9.1942 3.1 9.0942C1.8 8.2942 0.4 7.4942 0.5 5.2942C0.8 5.5942 1.6 5.7942 1.9 5.7942C1.1 5.5942 -0.2 2.4942 0.9 0.894197C2.8 2.7942 4.9 4.4942 8.5 4.6942C8.7 2.2942 9.7 0.794197 11.6 0.194197Z"/>
                 </svg>
               <span class="visually-hidden">Twitter</span>
             </a>
           </li>
 
-          <li class="footer-social-item">
-            <a class="footer-social-link" href="https://www.facebook.com/htmlacademy">
-              <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
+          <li class="footer-network-item">
+            <a class="footer-network-link" href="https://www.facebook.com/htmlacademy">
+              <svg class="footer-network-icon" aria-hidden="true" focusable="false" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 0C4.8 0 3 1.8 3 4V6H0V10H3V18H7V10H10V6H7V4H10V0H7Z"/>
                 </svg>
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
 
-          <li class="footer-social-item">
-            <a class="footer-social-link" href="https://www.youtube.com/c/HTMLAcademyRUS">
-              <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="20" height="14" viewBox="0 0 20 14" xmlns="http://www.w3.org/2000/svg">
+          <li class="footer-network-item">
+            <a class="footer-network-link" href="https://www.youtube.com/c/HTMLAcademyRUS">
+              <svg class="footer-network-icon" aria-hidden="true" focusable="false" width="20" height="14" viewBox="0 0 20 14" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M17.8136 0.418176C18.6746 0.648666 19.3513 1.32532 19.5818 2.18637C19.9983 3.74547 20 7.00033 20 7.00033C20 7.00033 20 10.2552 19.5818 11.8143C19.3513 12.6753 18.6746 13.352 17.8136 13.5825C16.2545 14.0007 9.99996 14.0007 9.99996 14.0007C9.99996 14.0007 3.74547 14.0007 2.18636 13.5825C1.32532 13.352 0.648666 12.6753 0.418176 11.8143C0 10.2552 0 7.00033 0 7.00033C0 7.00033 0 3.74547 0.418176 2.18637C0.648666 1.32532 1.32532 0.648666 2.18636 0.418176C3.74547 0 9.99996 0 9.99996 0C9.99996 0 16.2545 0 17.8136 0.418176ZM13.194 7.00061L7.99808 10.0002V4.00092L13.194 7.00061Z"/>
                 </svg>
               <span class="visually-hidden">Youtube</span>
